--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
-* {
+.App {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  width: 100%;
   font-family: 'Encode Sans Expanded',
   sans-serif;
 }
