--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Sora&display=swap');
+
+* {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Encode Sans Expanded',
-  sans-serif;
+  font-family: 'Sora', sans-serif;
 }
